# vcon-mac-wtf

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.vcon-repo/: graph.json
homebrew/: README.md  vcon-mac-wtf.rb
scripts/: stress_test.py
src/vcon_mac_wtf/: __init__.py  config.py  main.py
src/vcon_mac_wtf/engine/: __init__.py  mlx_engine.py  model_manager.py
src/vcon_mac_wtf/models/: openai_compat.py  responses.py  vcon.py
src/vcon_mac_wtf/routes/: health.py  models.py  openai_compat.py  transcribe.py
src/vcon_mac_wtf/services/: __init__.py  transcription.py  vcon_processor.py  wtf_converter.py
tests/: conftest.py  test_config.py  test_integration.py  test_mlx_engine.py  test_openai_compat.py  test_vcon_processor.py
